--- a/about.html
+++ b/about.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Cause</title>
+    <title>About</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- import the webpage's stylesheets -->
     <link rel="stylesheet" href="style.css" />
-
-    <!-- Add your Google fonts here -->
-   
   </head>
 
   <body>
-    
     <nav>
-    <!-- Add the navigation bar here-->
     <ul>
       <li>
         <a href="index.html">Home</a>
@@ -29,14 +22,9 @@
       </li>
     </ul>    
     </nav>
-
     <header>
-    <!--Top section with title-->
       <h1>What is happening to these children</h1>
     </header>
-    
-    <main>
-      <!--Add text and any image(s)-->
       <p>Children who are "crossing the borders to neighboring countries to the west, such as Poland, Slovakia, Hungary, Romania and Moldova," are increasing rapidly.</p>
         <div class="stats">
         <li>300,000+ to European countries</li>
@@ -49,6 +37,5 @@
       </div>
     <p>They experience severe hypothermia when the temperature drops below the freezing point and the lack of food and water leads to many malnourished children with weakened immune system to fight off illnesses.</p>
     <h3>We want to help provide shelter and food, translation, and a stable environment for these children to rest their bodies and minds. Please take a moment to contribute to our cause, be it in the form of donations, toys, posts, and most importantly your voices.</h3>
-    </main>
   </body>
 </html>
