--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>Welcome Ukrainian children to San Jose!</h1>
         <p>From Ukraine to the US</p>
     </header>
-      <div class="images">
+    <div class="images">
       <img src="https://www.savethechildren.org/content/dam/usa/images/global-programs/emergency/ukraine-conflict-ch1494843-rec.jpg/_jcr_content/renditions/cq5dam.thumbnail.768.768.jpg">
       <img src="https://www.savethechildren.org/content/dam/usa/images/global-programs/emergency/ukraine-refugees-ch1654430-rec.jpg/_jcr_content/renditions/cq5dam.thumbnail.768.768.jpg">
       <img src="https://www.savethechildren.org/content/dam/usa/images/global-programs/emergency/ukraine-refugees-mothers-children-ch1654421-rec.jpg/_jcr_content/renditions/cq5dam.thumbnail.768.768.jpg">
@@ -34,6 +34,6 @@
       <img src="https://www.savethechildren.org/content/dam/usa/images/global-programs/emergency/ukraine-crisis-displacement-refugee-ch1654025-rec.jpg/_jcr_content/renditions/cq5dam.thumbnail.768.768.jpg">
       <img src="https://www.savethechildren.org/content/dam/usa/images/global-programs/emergency/ukraine-conflict-children-in-crisis-ch1494283-rec.jpg/_jcr_content/renditions/cq5dam.thumbnail.768.768.jpg">
     </div>
-    <p class="info">We are calling out to the <span style="color: red">San Jose community</span> to assist us on our endeavour to assimilate these youths in their new homes. As of February 2022, millions of refugees had flee from Ukraine to seek asylum in their negihboring countries or the US. One of the least concerns that we consider in this war and the <span style="color: red">most impacted</span> is the <strong>displaced children</strong> who might or might not know what is going on and follow their parents on a harsh weather journey to a new country, new environemnt, and new people. We want to decrease their tension and burden on their parents.</p>
+    <p class="info">We are calling out to the <span style="color: red">San Jose community</span> to assist us on our endeavour to assimilate these youths in their new homes. As of February 2022, millions of refugees had flee from Ukraine to seek asylum in their neighboring countries or the United States. One of the least concerns that we consider in this war and the <span style="color: red">most impacted</span> is the <strong>displaced children</strong> who might or might not know what is going on and follow their parents on a harsh weather journey to a new country, new environemnt, and new people. We want to decrease their tension and burden on their parents.</p>
   </body>
 </html>
